compiler/tests/invalid_programs/syntax/invalid_float2.jm
!SyntaxError

puts(12."foo")
